@@ -7,7 +7,7 @@ su -s /bin/sh gforge -c /usr/share/gforge/bin/prepare-vhosts-file.pl
 	/usr/share/gforge/bin/fill-in-the-blanks.pl \
 		/var/lib/gforge/etc/templates/httpd.vhosts \
 		/var/lib/gforge/etc/httpd.vhosts \
-		/etc/gforge/gforge.conf
+		/etc/fusionforge/fusionforge.conf
 
 case "$1" in
 	--norestart)
