@@ -8,7 +8,11 @@ create_mainconffile () {
 	mkdir -p $mainconfdir
     fi
     if [ ! -e $mainconffile ] ; then
-        touch $mainconffile
+	if [ -e /etc/gforge/gforge.conf ] ; then
+	    cp -a /etc/gforge/gforge.conf $mainconffile
+	else
+            touch $mainconffile
+	fi
         chmod 600 $mainconffile
     fi
 }
